; ModuleID = '/home/carl/AnghaBench/git/extr_archive-zip.c_copy_le64.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive-zip.c_copy_le64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @copy_le64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy_le64(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = and i32 255, %5
  %7 = trunc i32 %6 to i8
  %8 = load i8*, i8** %3, align 8
  %9 = getelementptr inbounds i8, i8* %8, i64 0
  store i8 %7, i8* %9, align 1
  %10 = load i32, i32* %4, align 4
  %11 = ashr i32 %10, 8
  %12 = and i32 255, %11
  %13 = trunc i32 %12 to i8
  %14 = load i8*, i8** %3, align 8
  %15 = getelementptr inbounds i8, i8* %14, i64 1
  store i8 %13, i8* %15, align 1
  %16 = load i32, i32* %4, align 4
  %17 = ashr i32 %16, 16
  %18 = and i32 255, %17
  %19 = trunc i32 %18 to i8
  %20 = load i8*, i8** %3, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 2
  store i8 %19, i8* %21, align 1
  %22 = load i32, i32* %4, align 4
  %23 = ashr i32 %22, 24
  %24 = and i32 255, %23
  %25 = trunc i32 %24 to i8
  %26 = load i8*, i8** %3, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 3
  store i8 %25, i8* %27, align 1
  %28 = load i32, i32* %4, align 4
  %29 = ashr i32 %28, 32
  %30 = and i32 255, %29
  %31 = trunc i32 %30 to i8
  %32 = load i8*, i8** %3, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 4
  store i8 %31, i8* %33, align 1
  %34 = load i32, i32* %4, align 4
  %35 = ashr i32 %34, 40
  %36 = and i32 255, %35
  %37 = trunc i32 %36 to i8
  %38 = load i8*, i8** %3, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 5
  store i8 %37, i8* %39, align 1
  %40 = load i32, i32* %4, align 4
  %41 = ashr i32 %40, 48
  %42 = and i32 255, %41
  %43 = trunc i32 %42 to i8
  %44 = load i8*, i8** %3, align 8
  %45 = getelementptr inbounds i8, i8* %44, i64 6
  store i8 %43, i8* %45, align 1
  %46 = load i32, i32* %4, align 4
  %47 = ashr i32 %46, 56
  %48 = and i32 255, %47
  %49 = trunc i32 %48 to i8
  %50 = load i8*, i8** %3, align 8
  %51 = getelementptr inbounds i8, i8* %50, i64 7
  store i8 %49, i8* %51, align 1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
